# llms-playground

./: .gitignore  llms_playground.py  pyproject.toml  rag.py  utils.py
vector_db/compliance-guidelines-final-version.faiss/: index.faiss  index.pkl
vector_db/guia-compliance-versao-oficial.faiss/: index.faiss  index.pkl
vector_db/guia-de-combate-a-carteis-em-licitacao-versao-final-1.faiss/: index.faiss  index.pkl
vector_db/gun-jumping-versao-final.faiss/: index.faiss  index.pkl
