[project]
name = "llms_playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "docling>=2.18.0",
    "faiss-gpu-cu12>=1.10.0",
    "groq>=0.17.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-ollama>=0.2.3",
    "openai>=1.61.0",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "streamlit-pdf-viewer>=0.0.21",
]
